--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="col-lg-6">
                     <div class="about__pic">
                         <div class="about__pic__inner">
-                            <img src="img/ayz/ates-insaat-01.jpg" height="550px" width="450px" style=" background-size: cover;
+                            <img src="img/ayz/ates-insaat-07.jpg" height="550px" width="450px" style=" background-size: cover;
                             background-position: center;">
                         </div>
                     </div>
@@ -197,35 +197,42 @@
     <!-- Call To Action Section End -->
 
     <!-- Testimonial Section Begin -->
-    <section class="testimonial spad set-bg" style="margin-bottom: -200px; margin-top: -50px; background-image: url('img/testimonial/testimonial-bg.jpg');">
+    <section class="testimonial spad set-bg"
+        style="margin-bottom: -200px; margin-top: -50px; background-image: url('img/testimonial/testimonial-bg.jpg');">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="logo__carousel owl-carousel">
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-abb.png" alt="" style="width: 150px; height: auto;"></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-abb.png" alt=""
+                                    style="width: 150px; height: auto;"></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-aski.png" alt="" style="width: 150px; height: auto;"></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-aski.png" alt=""
+                                    style="width: 150px; height: auto;"></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-cumhurbaskanligi.png" alt="" style="width: 150px; height: auto;"></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-cumhurbaskanligi.png" alt=""
+                                    style="width: 150px; height: auto;"></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-hab.png" alt="" style="width: 150px; height: auto;"></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-hab.png" alt=""
+                                    style="width: 150px; height: auto;"></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-meb.png" alt="" style="width: 150px; height: auto;"></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-meb.png" alt=""
+                                    style="width: 150px; height: auto;"></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-aso.png" alt="" style="width: 150px; height: auto;"></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-aso.png" alt=""
+                                    style="width: 150px; height: auto;"></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    
+
     <!-- Testimonial Section End -->
 
     <!-- Latest Section Begin -->
