--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#">LOGO<img src="img/ayz/LOGO.png" alt=""></a>
+                            <a href="#">LOGO</a>
                         </div>
                         <p>Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara - Türkiye
                         </p>
